# Kodama-website

./: .gitignore  CNAME  README.md  base.html  docker-compose.yml  docker_run.bat  dockerfile  env_setup.py  index.html  kodama-storage-7c07f9d27828.json  main.html  mobile.css  pyproject.toml  script.js  style.css
.github/workflows/: build.yaml  deploy.yml  static.yml
res/css/: about.css  courses.css  desktop-squares.css  faq.css  menu.css  mobile-squares.css  mobile.css  start.css  students.css  style.css  submit-app.css
src/: config.py  dependencies.py  main.py  spreadsheets.py
templates/: about_section.html  between_decor_purple.html  courses_section.html  footer.html  guide_school_section.html  header.html  mobile_menu.html  questions_section.html  start_section.html  students_section.html  submit_app_section.html
