[tool.poetry]
name = "src"
version = "0.1.0"
description = "API for prorgramming school web-site"
authors = ["Gen121 <chelnok1190@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
google-api-python-client = "^2.120.0"
pytz = "^2024.1"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
djlint = "^1.34.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
